<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/GrayBrick"
    android:orientation="vertical" >

    <!-- UpComing Task -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/BlueGrey"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="40dp"
            android:text="@string/timer"
            android:textColor="@color/OrangeYellow"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="50dp"
            android:paddingTop="5dp"
            android:textColor="@color/OrangeYellow" />
    </LinearLayout>

    <Button
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/triangle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/White"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/btn_my_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/tv_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/tv_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:id="@+id/tv_dayOfWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@android:color/darker_gray" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:background="@color/Shadow" />
    </LinearLayout>
    <!-- End UpComing Task -->


    <!-- Timer -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:background="@drawable/btn_style_white"
            android:id="@+id/btn_myTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/img_my_tasks" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="42dp" >

                <TextView
                    android:id="@+id/myTasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task"
                    android:textColor="@color/DarkGray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_pref_myTasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/myTasks"
                    android:text="@string/no"
                    android:textColor="@color/LightGrey"
                    android:textSize="12sp" />

                <TextView
                    android:layout_marginLeft="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/myTasks"
                    android:layout_toRightOf="@id/tv_pref_myTasks"
                    android:text="@string/upcoming"
                    android:textColor="@color/LightGrey"
                    android:textSize="12sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_addTask"
                android:layout_width="80dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_style_purple"
                android:text="@string/add"
                android:textColor="@color/White"
                android:textSize="12sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/Shadow"
            android:gravity="bottom" />

        <RelativeLayout
            android:background="@drawable/btn_style_white"
            android:id="@+id/btn_myEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/img_my_events" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="42dp" >

                <TextView
                    android:id="@+id/myEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event"
                    android:textColor="@color/DarkGray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_pref_myEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/myEvents"
                    android:text="@string/no"
                    android:textColor="@color/LightGrey"
                    android:textSize="12sp" />

                <TextView
                    android:layout_marginLeft="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/myEvents"
                    android:layout_toRightOf="@id/tv_pref_myEvents"
                    android:text="@string/events"
                    android:textColor="@color/LightGrey"
                    android:textSize="12sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_addEvent"
                android:layout_width="80dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_style_pink"
                android:text="@string/add"
                android:textColor="@color/White"
                android:textSize="12sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/Shadow"
            android:gravity="bottom" />

        <RelativeLayout
            android:background="@drawable/btn_style_white"
            android:id="@+id/btn_eventTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/img_event_timer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="42dp"
                android:text="@string/count"
                android:textColor="@color/DarkGray"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:background="@color/Shadow"
            android:gravity="bottom" />
    </LinearLayout>

</LinearLayout>