<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GrayBrick"
    android:orientation="vertical" >

    <!-- upper place -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_weight="8"
        android:padding="@dimen/activity_horizontal_margin" >

        <View
            android:id="@+id/aln_v"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/Shadow" />

        <LinearLayout
            android:id="@+id/aln_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/aln_v"
            android:background="@color/White"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/sp_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/prompt_task"
                android:spinnerMode="dialog" />
        </LinearLayout>
    </RelativeLayout>
    <!-- end upper -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="5"
        android:padding="@dimen/activity_horizontal_margin" >

        <LinearLayout
            android:id="@+id/aln_ctrslt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/add_task_end"
                android:textColor="@color/DarkOrange"
                android:textSize="16sp" />

            <Button
                android:id="@+id/sp_date"
                style="?android:attr/spinnerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <Button
                android:id="@+id/sp_time"
                style="?android:attr/spinnerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/aln_ctrslt"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/add_task_start"
                android:textColor="@color/DarkOrange"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/prepare_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dip"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/prepare_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="14dip"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>